# url-shortener-project

./: README.md
url-shortener-backend/: Cargo.toml  azure-pipelines.yml
url-shortener-backend/url-shortener-application/: Cargo.toml
url-shortener-backend/url-shortener-application/src/models/: errors.rs  mod.rs  response_model.rs  url_models.rs
url-shortener-backend/url-shortener-application/src/services/: url_service.rs
url-shortener-backend/url-shortener-database/: Cargo.toml
url-shortener-backend/url-shortener-database/src/database/: pool.rs
url-shortener-backend/url-shortener-database/src/models/: errors.rs  mod.rs  url_models.rs
url-shortener-backend/url-shortener-database/src/repositories/: url_repository.rs
url-shortener-backend/url-shortener-host/: Cargo.toml
url-shortener-backend/url-shortener-host/src/: main.rs
url-shortener-backend/url-shortener-infrastructure/: Cargo.toml
url-shortener-backend/url-shortener-infrastructure/src/: lib.rs
url-shortener-backend/url-shortener-infrastructure/src/redis/: config.rs  error.rs  mod.rs  redis_client.rs
url-shortener-backend/url-shortener-infrastructure/src/s3/: config.rs  error.rs  mod.rs  s3_client.rs
url-shortener-backend/url-shortener-webapi/: Cargo.toml
url-shortener-backend/url-shortener-webapi/src/: lib.rs
url-shortener-backend/url-shortener-webapi/src/handlers/: mod.rs  url_handler.rs
url-shortener-backend/url-shortener-webapi/src/implementations/: errors.rs
url-shortener-backend/url-shortener-webapi/src/models/: api_response_model.rs  mod.rs
url-shortener-backend/url-shortener-webapi/src/routes/: mod.rs  url_routes.rs
url-shortener-frontend/: .gitignore  azure-pipelines.yml  eslint.config.js  package-lock.json  package.json  quasar.config.ts
url-shortener-frontend/src/boot/: axios.ts
url-shortener-frontend/src/css/: app.scss
url-shortener-frontend/src/i18n/: index.ts
url-shortener-frontend/src/i18n/en-US/: index.ts
url-shortener-frontend/src/i18n/ro-RO/: index.ts
url-shortener-frontend/src/pages/: UrlPage.vue
url-shortener-frontend/src/router/: routes.ts
