[package]
name = "url-shortener-database"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = "1.0.217"
sqlx = { version = "0.8.3", features = ["runtime-tokio-native-tls", "postgres"] }
error-stack = "0.5.0"
async-trait = "0.1.86"
coi = "0.10.3"
mockall = "0.13.1"

[lints.rust]
unused_imports = "deny"
unsafe_code = "forbid"
warnings= "deny"