[package]
name = "url-shortener-infrastructure"
version = "0.1.0"
edition = "2021"

[dependencies]
aws-sdk-s3 = { version = "1.4.0" }
serde = "1.0.217"
redis = { version = "0.29.2", features = ["tokio-comp"]}
async-trait = "0.1.86"
aws-config = "1.5.16"
error-stack = "0.5.0"
coi = "0.10.3"
mockall = "0.13.1"
serde_json = "1.0.140"